// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expensessummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render expensessummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,233,242.34
  </h1>
</div>
`;
